--- a/templates/default/my.cnf.cluster.erb
+++ b/templates/default/my.cnf.cluster.erb
@@ -43,17 +43,18 @@ malloc-lib       = <%= node["percona"]["server"]["jemalloc_lib"] %>
 #
 # * Basic Settings
 #
-user              = <%= node["percona"]["server"]["username"] %>
-pid-file          = <%= node["percona"]["server"]["pidfile"] %>
-socket            = <%= node["percona"]["server"]["socket"] %>
-port              = <%= node["percona"]["server"]["port"] %>
-basedir           = <%= node["percona"]["server"]["basedir"] %>
-datadir           = <%= node["percona"]["server"]["datadir"] %>
-tmpdir            = <%= node["percona"]["server"]["tmpdir"] %>
-slave_load_tmpdir = <%= node["percona"]["server"]["slave_load_tmpdir"] %>
-# language          = <%= node["percona"]["server"]["language"] %>
-character_set_server = <%= node["percona"]["server"]["character_set"] %>
-collation_server  = <%= node["percona"]["server"]["collation"] %>
+user                  = <%= node["percona"]["server"]["username"] %>
+pid-file              = <%= node["percona"]["server"]["pidfile"] %>
+socket                = <%= node["percona"]["server"]["socket"] %>
+port                  = <%= node["percona"]["server"]["port"] %>
+basedir               = <%= node["percona"]["server"]["basedir"] %>
+datadir               = <%= node["percona"]["server"]["datadir"] %>
+tmpdir                = <%= node["percona"]["server"]["tmpdir"] %>
+slave_load_tmpdir     = <%= node["percona"]["server"]["slave_load_tmpdir"] %>
+# language            = <%= node["percona"]["server"]["language"] %>
+character_set_server  = <%= node["percona"]["server"]["character_set"] %>
+collation_server      = <%= node["percona"]["server"]["collation"] %>
+server-id             = <%= node["percona"]["server"]["id"] %>
 
 <% if node["percona"]["server"]["federated"] %>
 federated
