--- a/templates/default/my.cnf.cluster.erb
+++ b/templates/default/my.cnf.cluster.erb
@@ -54,8 +54,10 @@ slave_load_tmpdir     = <%= node["percona"]["server"]["slave_load_tmpdir"] %>
 # language            = <%= node["percona"]["server"]["language"] %>
 character_set_server  = <%= node["percona"]["server"]["character_set"] %>
 collation_server      = <%= node["percona"]["server"]["collation"] %>
+<%  if node["percona"]["version"] >= "5.7" -%>
 server-id             = <%= node["percona"]["server"]["id"] %>
 pxc-strict-mode       = <%= node["percona"]["server"]["pxc-strict-mode"] %>
+<% end %>
 
 <% if node["percona"]["server"]["federated"] %>
 federated
